@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-30 13:15";
+char cvsdate[]="2004-07-07 13:03";
