@@ -1,11 +1,13 @@
 /**********************************************************
  * common definitions
- * $Id: defs.h,v 1.7 2004/05/31 13:15:39 sisoft Exp $
+ * $Id: defs.h,v 1.8 2004/07/07 08:58:32 sisoft Exp $
  **********************************************************/
 #ifndef __DEFS_H__
 #define __DEFS_H__
 
+#undef TRUE
 #define TRUE	1
+#undef FALSE
 #define FALSE	0
 
 #define OK	0
